<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/include_toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/layoutName"
                style="@style/mineLayoutStyle">

                <TextView
                    style="@style/mineTextLeftStyle"
                    android:text="@string/mine_name" />

                <EditText
                    android:id="@+id/etName"
                    android:hint="@string/mine_name_hint"
                    style="@style/mineEditTextRightStyle" />
            </LinearLayout>

            <include layout="@layout/line_horizontal" />

            <LinearLayout
                android:id="@+id/layoutNickName"
                style="@style/mineLayoutStyle">

                <TextView
                    style="@style/mineTextLeftStyle"
                    android:text="@string/mine_nickname" />

                <EditText
                    android:id="@+id/etNickName"
                    android:hint="@string/mine_nickname_hint"
                    style="@style/mineEditTextRightStyle" />
            </LinearLayout>

        </LinearLayout>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imAvatars"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="16dp"
            android:src="@mipmap/ic_launcher"
            app:civ_border_color="@color/black"
            app:civ_border_width="2dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical">

        <LinearLayout style="@style/mineEditLayoutStyle">

            <TextView
                style="@style/mineTextLeftStyle"
                android:text="@string/mine_date_of_birth" />

            <TextView
                android:id="@+id/tvDateOfBirth"
                style="@style/mineEditTextRightStyle" />

        </LinearLayout>

        <!--<include layout="@layout/line_horizontal" />-->

        <!--<LinearLayout style="@style/mineEditLayoutStyle">-->

            <!--<TextView-->
                <!--style="@style/mineTextLeftStyle"-->
                <!--android:inputType="number"-->
                <!--android:maxLength="3"-->
                <!--android:text="@string/mine_age" />-->

            <!--<EditText-->
                <!--android:id="@+id/etAge"-->
                <!--style="@style/mineEditTextRightStyle" />-->
        <!--</LinearLayout>-->

        <include layout="@layout/line_horizontal" />

        <LinearLayout style="@style/mineEditLayoutStyle">

            <TextView
                style="@style/mineTextLeftStyle"
                android:text="@string/mine_sex" />

            <TextView
                android:id="@+id/tvSex"
                android:text="@string/common_male"
                style="@style/mineEditTextRightStyle" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:visibility="gone"
        android:id="@+id/layoutArea"
        style="@style/mineEditLayoutStyle"
        android:layout_marginTop="16dp">

        <TextView
            style="@style/mineTextLeftStyle"
            android:text="@string/mine_register_area" />

        <TextView
            android:id="@+id/tvArea"
            style="@style/mineEditTextRightStyle" />
    </LinearLayout>

    <Button
        android:id="@+id/btnOk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/main_margin_top"
        android:layout_marginRight="@dimen/main_margin_top"
        android:layout_marginTop="@dimen/main_margin_top"
        android:background="@drawable/selector_bg_btn"
        android:text="@string/mine_edit_confirm"
        android:textColor="@drawable/color_text_btn"
        android:textSize="@dimen/login_hint_textSize" />

</LinearLayout>