<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/layoutName"
                style="@style/mineLayoutStyle">

                <TextView
                    style="@style/mineTextLeftStyle"
                    android:text="@string/mine_name" />

                <EditText
                    android:id="@+id/tvName"
                    style="@style/mineEditTextRightStyle" />
            </LinearLayout>

            <include layout="@layout/line_horizontal" />

            <LinearLayout
                android:id="@+id/layoutNickName"
                style="@style/mineLayoutStyle">

                <TextView
                    style="@style/mineTextLeftStyle"
                    android:text="@string/mine_nickname" />

                <EditText
                    android:id="@+id/tvNickName"
                    style="@style/mineEditTextRightStyle" />
            </LinearLayout>

        </LinearLayout>

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="16dp"
            android:src="@mipmap/ic_launcher" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical">

        <LinearLayout style="@style/mineEditLayoutStyle">

            <TextView
                style="@style/mineTextLeftStyle"
                android:text="@string/mine_date_of_birth" />

            <EditText
                android:id="@+id/etDateOfBirth"
                style="@style/mineEditTextRightStyle" />

        </LinearLayout>

        <include layout="@layout/line_horizontal" />

        <LinearLayout style="@style/mineEditLayoutStyle">

            <TextView
                style="@style/mineTextLeftStyle"
                android:text="@string/mine_age" />

            <EditText
                android:id="@+id/etAge"
                style="@style/mineEditTextRightStyle" />
        </LinearLayout>

        <include layout="@layout/line_horizontal" />

        <LinearLayout style="@style/mineEditLayoutStyle">

            <TextView
                style="@style/mineTextLeftStyle"
                android:text="@string/mine_sex" />

            <EditText
                android:id="@+id/etSex"
                style="@style/mineEditTextRightStyle" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutArea"
        style="@style/mineEditLayoutStyle"
        android:layout_marginTop="16dp">

        <TextView
            style="@style/mineTextLeftStyle"
            android:text="@string/mine_register_area" />

        <EditText
            android:id="@+id/etArea"
            style="@style/mineEditTextRightStyle" />
    </LinearLayout>

</LinearLayout>