<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <me.tabak.fragmentswitcher.FragmentSwitcher
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/rgMainTabLayout"
        android:layout_weight="1" />

    <LinearLayout
        android:id="@+id/rgMainTabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <include layout="@layout/line_horizontal" />

        <RadioGroup
            android:id="@+id/rgMainTab"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/main_tab_rg_bg"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="5dp">

            <RadioButton
                android:id="@+id/rbMainTabTeam"
                style="@style/radioMainTabStyle"
                android:checked="true"
                android:drawableTop="@drawable/selector_main_tab_home"
                android:text="@string/main_tab_home" />

            <RadioButton
                android:id="@+id/rbMainTabFind"
                style="@style/radioMainTabStyle"
                android:drawableTop="@drawable/selector_main_tab_message"
                android:text="@string/main_tab_message" />

            <RadioButton
                android:id="@+id/rbMainTabMine"
                style="@style/radioMainTabStyle"
                android:drawableTop="@drawable/selector_main_tab_mine"
                android:text="@string/main_tab_mine" />
        </RadioGroup>

    </LinearLayout>


</RelativeLayout>
