<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <include layout="@layout/include_mime_title" />

    <LinearLayout
        android:id="@+id/layoutMine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:background="@drawable/selector_layout_bg"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="18dp"
            android:src="@mipmap/ic_launcher" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingLeft="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="bottom"
                android:text="Baby杀手"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="top"
                android:text="有战必应"
                android:textSize="16sp" />

        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="10dp"
            android:scaleType="centerCrop"
            android:src="@mipmap/ic_right_arrow" />

    </LinearLayout>

    <include layout="@layout/line_horizontal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal">

        <LinearLayout style="@style/homeMineTopLayout">

            <TextView
                style="@style/homeMineTopLayout.Text"
                android:text="0" />

            <TextView
                style="@style/homeMineTopLayout.TextBottom"
                android:text="进球" />

        </LinearLayout>

        <include layout="@layout/line_vertical" />

        <LinearLayout style="@style/homeMineTopLayout">

            <TextView
                style="@style/homeMineTopLayout.Text"
                android:text="0" />

            <TextView
                style="@style/homeMineTopLayout.TextBottom"
                android:text="胜利" />

        </LinearLayout>

        <include layout="@layout/line_vertical" />

        <LinearLayout style="@style/homeMineTopLayout">

            <TextView
                style="@style/homeMineTopLayout.Text"
                android:text="0" />

            <TextView
                style="@style/homeMineTopLayout.TextBottom"
                android:text="平局" />

        </LinearLayout>

        <include layout="@layout/line_vertical" />

        <LinearLayout style="@style/homeMineTopLayout">

            <TextView
                style="@style/homeMineTopLayout.Text"
                android:text="0" />

            <TextView
                style="@style/homeMineTopLayout.TextBottom"
                android:text="积分" />

        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <TextView
            style="@style/homeMineTextLeftStyle"
            android:drawableLeft="@mipmap/ic_match"
            android:text="@string/mine_match" />

        <include layout="@layout/line_horizontal" />

        <TextView
            style="@style/homeMineTextLeftStyle"
            android:drawableLeft="@mipmap/ic_my_match"
            android:text="@string/mine_my_match" />

        <include layout="@layout/line_horizontal" />

        <TextView
            style="@style/homeMineTextLeftStyle"
            android:drawableLeft="@mipmap/ic_my_war"
            android:text="@string/mine_my_war" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <TextView
            style="@style/homeMineTextLeftStyle"
            android:drawableLeft="@mipmap/ic_identity"
            android:text="@string/mine_identity" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <TextView
            style="@style/homeMineTextLeftStyle"
            android:drawableLeft="@mipmap/ic_ball_friend"
            android:text="@string/mine_ball_friend" />

        <include layout="@layout/line_horizontal" />

        <TextView
            style="@style/homeMineTextLeftStyle"
            android:drawableLeft="@mipmap/ic_contact_service"
            android:text="@string/mine_contact_service" />

    </LinearLayout>

</LinearLayout>

